--- a/back/package.json
+++ b/back/package.json
@@ -11,9 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-validator": "^5.3.1",
     "mongoose": "^6.0.10",
-    "nodemon": "^2.0.13"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.13",
+    "passport-jwt": "^4.0.0",
+    "uuid": "^8.3.2"
   }
 }
