--- a/back/package.json
+++ b/back/package.json
@@ -12,12 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.27.1",
+    "colors": "^1.4.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-validator": "^5.3.1",
+    "formidable": "^1.2.2",
+    "lodash": "^4.17.21",
     "mongoose": "^6.0.10",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.13",
