--- a/back/package.json
+++ b/back/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.17.2",
     "express-validator": "^5.3.1",
     "formidable": "^1.2.2",
+    "kafka-node": "^5.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.0.10",
     "morgan": "^1.10.0",
