--- a/kafka-backend/package.json
+++ b/kafka-backend/package.json
@@ -13,12 +13,16 @@
     "bcrypt": "^1.0.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
+    "circular-json": "^0.5.9",
+    "cloudinary": "^1.27.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "formidable": "^1.1.1",
+    "formidable": "^1.2.6",
+    "fs": "0.0.1-security",
     "glob": "^7.1.2",
     "images-upload-middleware": "^1.1.1",
     "kafka-node": "^5.0.0",
+    "lodash": "^4.17.21",
     "mongodb": "^2.2.31",
     "mongodb-autoincrement": "^1.0.1",
     "mongoose": "^5.10.11",
