--- a/back/package.json
+++ b/back/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "circular-json": "^0.5.9",
     "cloudinary": "^1.27.1",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.5",
