--- a/front/.env
+++ b/front/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL = http://localhost:8000/ubereats
+REACT_APP_API_URL = http://52.15.136.150:8000/ubereats
 SKIP_PREFLIGHT_CHECK=true
